DTS-41126: Show hide defect fix
Change log: Sonar Fix